# Minimal-Menu

./: CMakeLists.txt  README.md
plasmoid/: metadata.desktop
plasmoid/contents/ui/: ContextMenu.qml  MainMenu.qml  SystemMenu.qml  SystemMenuItem.qml  main.qml
plugins/: CMakeLists.txt  qmldir
plugins/src/: ActivityEntry.cpp  ActivityEntry.hpp  ApplicationLauncher.cpp  ApplicationLauncher.hpp  KSMClient.cpp  KSMClient.hpp  PlasmoidPlugin.cpp  PlasmoidPlugin.hpp  QDBusConnectionWrapper.hpp  QDBusConnectionWrapperImpl.cpp  QDBusConnectionWrapperImpl.hpp  QProcessWrapper.hpp  QProcessWrapperImpl.cpp  QProcessWrapperImpl.hpp  RecentlyUsedHandler.cpp  RecentlyUsedHandler.hpp  config.hpp
plugins/tests/: ApplicationLauncherTest.cpp  GTestWidget.cpp  GTestWidget.hpp  KSMClientTest.cpp  RecentlyUsedHandlerTest.cpp  main.cpp
